@@ -3,15 +3,24 @@
 <title>Vienna 2.5.0.2500</title>
 </head>
 <body>
+<h1>This version requires Mac OS X 10.5 Leopard.</h1>
 <ul>
-<li>Add support for plugins.</li>
+<li>User Interface refresh: Removed the grey headers, made the vertical divider easier to grab and made filtering more discoverable.</li>
+<li>Added support for plugins.</li>
+<li>Added support for search engine plugins.</li>
+<li>Added support for blog editor plugins.</li>
+<li>Added support for sharing plugins that work like bookmarklets for social websites.</li>
+<li>Added support for script plugins.</li>
 <li>Added Share With Facebook button.</li>
 <li>Added Share With Evernote button.</li>
-<li>Added Share With Twitter button.</li>
+<li>Added Share With Twitter button with automatic URL shortening via bit.ly.</li>
 <li>Added user contributed "Share with Delicious" plugin to the core distribution. Thanks to forum user czanderna.</li>
 <li>Update to the current version of Sparkle, which prevents auto-updating to a version of Vienna which will not run on the user's system.</li>
 <li>Fix bug where deleting a feed in Unified view mode would cause Vienna to stop working correctly.</li>
 <li>Fix bug where changing the article font size would crash Vienna.</li>
+<li>Fix bug that caused zombiefied update spinners (thanks to Curtis Faith).</li>
+<li>Fix bug that caused the reading position to be lost upon refresh (thanks to Curtis Faith).</li>
+
 </ul>
 </body>
 </html>
